--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "vform": "^2.1.2",
         "vue-router": "^4.2.5",
         "vue-toast-notification": "^3.1.2",
+        "vue3-carousel": "^0.3.1",
         "vue3-toastify": "^0.2.1"
     }
 }
